replaced map with list comprehention

--- a/data-statistics.ipynb
+++ b/data-statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "source": [
     "import json\r\n",
     "from operator import itemgetter"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "source": [
     "bangla_month_file_name = './data-collection/bangla-months.json'\r\n",
     "bangla_month_file = open(bangla_month_file_name, encoding='utf-8')\r\n",
@@ -39,14 +39,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "source": [
     "bangla_months_map = { month['index'] : month for month in bangla_months_data}\r\n",
     "bangla_months_map"
@@ -71,14 +71,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "source": [
     "year = 2020\r\n",
     "eng_bng_mapping_file_name = f'./data-collection/english-bangla-date-mapping-{year}.json'\r\n",
@@ -99,16 +99,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "source": [
-    "bangla_dates = list(map(lambda eng_bng_date_pair : eng_bng_date_pair[1], eng_bng_mapping_data))\r\n",
+    "bangla_dates = [eng_bng_date_pair[1] for eng_bng_date_pair in eng_bng_mapping_data]\r\n",
     "bangla_dates.sort(key=itemgetter('month', 'day'))\r\n",
     "bangla_dates[:5]"
    ],
@@ -125,14 +125,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "source": [
     "bangla_month_days = dict()\r\n",
     "for date in bangla_dates:\r\n",
@@ -160,14 +160,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "source": [
     "bangla_month_days = {bangla_months_map[k]['nameBn'] : v for k, v in bangla_month_days.items()}\r\n",
     "bangla_month_days"
@@ -192,26 +192,25 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "source": [
     "def get_bangla_month_days(year):\r\n",
     "    eng_bng_mapping_file_name = f'./data-collection/english-bangla-date-mapping-{year}.json'\r\n",
     "    eng_bng_mapping_file = open(eng_bng_mapping_file_name, encoding='utf-8')\r\n",
     "    eng_bng_mapping_data = json.load(eng_bng_mapping_file)\r\n",
-    "    bangla_dates = list(map(lambda eng_bng_date_pair : eng_bng_date_pair[1], eng_bng_mapping_data))\r\n",
+    "    bangla_dates = [eng_bng_date_pair[1] for eng_bng_date_pair in eng_bng_mapping_data]\r\n",
     "    bangla_dates.sort(key=itemgetter('month', 'day'))\r\n",
     "    bangla_month_days = dict()\r\n",
     "    for date in bangla_dates:\r\n",
     "        month_index = date['month'] - 1\r\n",
     "        bangla_month_days[month_index] = bangla_month_days.get(month_index, 0) + 1\r\n",
-    "    bangla_month_days\r\n",
     "    return {bangla_months_map[k]['nameBn'] : v for k, v in bangla_month_days.items()}"
    ],
    "outputs": [],
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "source": [
     "# for non leap year\r\n",
     "get_bangla_month_days(2021)"
@@ -244,14 +243,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "source": [
     "# for leap year\r\n",
     "get_bangla_month_days(2020)"
@@ -276,7 +275,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 21
     }
    ],
    "metadata": {}
