replaced for loop counter with Counter class

--- a/data-statistics.ipynb
+++ b/data-statistics.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "source": [
     "import json\r\n",
-    "from operator import itemgetter"
+    "from operator import itemgetter\r\n",
+    "from collections import Counter"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "source": [
     "bangla_month_file_name = './data-collection/bangla-months.json'\r\n",
     "bangla_month_file = open(bangla_month_file_name, encoding='utf-8')\r\n",
@@ -39,14 +40,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 43
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "source": [
     "bangla_months_map = { month['index'] : month for month in bangla_months_data}\r\n",
     "bangla_months_map"
@@ -71,14 +72,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 44
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "source": [
     "year = 2020\r\n",
     "eng_bng_mapping_file_name = f'./data-collection/english-bangla-date-mapping-{year}.json'\r\n",
@@ -99,14 +100,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 45
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "source": [
     "bangla_dates = [eng_bng_date_pair[1] for eng_bng_date_pair in eng_bng_mapping_data]\r\n",
     "bangla_dates.sort(key=itemgetter('month', 'day'))\r\n",
@@ -125,19 +126,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 46
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "source": [
-    "bangla_month_days = dict()\r\n",
-    "for date in bangla_dates:\r\n",
-    "    month_index = date['month'] - 1\r\n",
-    "    bangla_month_days[month_index] = bangla_month_days.get(month_index, 0) + 1\r\n",
+    "bangla_month_days = Counter(map(lambda date : date['month'] - 1, bangla_dates))\r\n",
     "bangla_month_days"
    ],
    "outputs": [
@@ -145,29 +143,29 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{0: 31,\n",
-       " 1: 31,\n",
-       " 2: 31,\n",
-       " 3: 31,\n",
-       " 4: 31,\n",
-       " 5: 30,\n",
-       " 6: 30,\n",
-       " 7: 30,\n",
-       " 8: 30,\n",
-       " 9: 30,\n",
-       " 10: 31,\n",
-       " 11: 30}"
+       "Counter({0: 31,\n",
+       "         1: 31,\n",
+       "         2: 31,\n",
+       "         3: 31,\n",
+       "         4: 31,\n",
+       "         5: 30,\n",
+       "         6: 30,\n",
+       "         7: 30,\n",
+       "         8: 30,\n",
+       "         9: 30,\n",
+       "         10: 31,\n",
+       "         11: 30})"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 47
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "source": [
     "bangla_month_days = {bangla_months_map[k]['nameBn'] : v for k, v in bangla_month_days.items()}\r\n",
     "bangla_month_days"
@@ -192,14 +190,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 48
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "source": [
     "def get_bangla_month_days(year):\r\n",
     "    eng_bng_mapping_file_name = f'./data-collection/english-bangla-date-mapping-{year}.json'\r\n",
@@ -207,10 +205,7 @@
     "    eng_bng_mapping_data = json.load(eng_bng_mapping_file)\r\n",
     "    bangla_dates = [eng_bng_date_pair[1] for eng_bng_date_pair in eng_bng_mapping_data]\r\n",
     "    bangla_dates.sort(key=itemgetter('month', 'day'))\r\n",
-    "    bangla_month_days = dict()\r\n",
-    "    for date in bangla_dates:\r\n",
-    "        month_index = date['month'] - 1\r\n",
-    "        bangla_month_days[month_index] = bangla_month_days.get(month_index, 0) + 1\r\n",
+    "    bangla_month_days = Counter(map(lambda date : date['month'] - 1, bangla_dates))\r\n",
     "    return {bangla_months_map[k]['nameBn'] : v for k, v in bangla_month_days.items()}"
    ],
    "outputs": [],
@@ -218,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "source": [
     "# for non leap year\r\n",
     "get_bangla_month_days(2021)"
@@ -243,14 +238,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 50
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "source": [
     "# for leap year\r\n",
     "get_bangla_month_days(2020)"
@@ -275,7 +270,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 51
     }
    ],
    "metadata": {}
